--- a/style.css
+++ b/style.css
@@ -439,6 +439,9 @@ footer li {
     margin: 0.5rem;
 }
 
+footer h5 {
+    font-family: 'Helvetica';
+}
 
 .audio-icon-wrapper {
     width: 4rem;
@@ -473,6 +476,10 @@ footer li {
 /* Media Query */
 /* Extra Large */
 @media (max-width: 1200px) {
+    html {
+        font-size: 100%;
+    }
+    
     .home .heart {
         transform: translateX(-50%) translateY(45px);
     }
@@ -621,9 +628,9 @@ footer li {
     }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 380px) {
     html {
-        font-size: 60%;
+        font-size: 65%;
     }
 
     .simply-countdown .simply-section {
@@ -655,9 +662,9 @@ footer li {
         padding: 10px;
         margin: 4.5px;
     }
-}
-
+        
     .simply-countdown {
-        padding-left: 15px;
+        padding: 10px;
+        margin: 2px;
     }
 }
